<resources>
    <string name="app_name">JobsandTuitionsFinder</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="nav_header_title">Ajbina Hridi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">ajbina@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profil">Profilr</string>
    <string name="part">Part Time</string>
    <string name="full">Full Time</string>
    <string name="coaching">Coaching</string>
    <string name="cv">CV</string>
    <string name="book">Books</string>
    <string name="setting">Settings</string>
    <string name="layout">Layout</string>
    <string name="log">You are successfully login into your account</string>

    <array name="gender">
        <item name="Male">Male</item>
        <item name="Female">Female</item>
    </array>

   




    <array name="level">
        <item name="L-1">Level-1</item>
        <item name="L-2">Level-2</item>
        <item name="L-3">Level-3</item>
        <item name="L-4">Level-4</item>
        <item name="Ex Student">Exstudent</item>
    </array>


</resources>
